Bug 73051 - Font and Font Size Dropdown boxes are too small...
Summary: Font and Font Size Dropdown boxes are too small...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords: regression
: 60972 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-26 22:41 UTC by Emir Sarı
Modified: 2014-08-16 16:49 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (35.67 KB, image/png)
2013-12-26 22:41 UTC, Emir Sarı
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emir Sarı 2013-12-26 22:41:02 UTC
Created attachment 91203 [details]
Screenshot

In addition to Bug 60972, now font size box is too small even not able to house the number "10". 

Another UI regression...
Comment 1 Adolfo Jayme Barrientos 2014-01-26 18:00:46 UTC
Can’t reproduce here, works both on Win and Linux.
Comment 2 Maxim Monastirsky 2014-01-27 14:14:38 UTC
Thanks for filling a bug for it! Reproducible here with master (for quite some time) under Fedora.
Comment 3 Michael Meeks 2014-01-27 15:07:39 UTC
Hi Caolan; did we change anything in a numeric drop-down / sizing logic ?
Comment 4 Caolán McNamara 2014-01-28 16:02:58 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?id=7347482cc360ad3dc9ed77047441c2e30476fed3 changed m_LogicalSize from 30 to 20

master only doesn't affect 4.2
Comment 5 Commit Notification 2014-01-28 16:11:24 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8138c07b984ba1654483b4dc3488820ca4deaaca

Resolves: fdo#73051 font size menubar widget too narrow



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-01-28 16:56:16 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=780eb9f704e7a61f43624a2c03b4f6a15647a1a1

Related: fdo#73051 make font size drop down of optimal width



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Jorendc 2014-01-29 22:04:47 UTC
*** Bug 60972 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2014-03-12 18:05:58 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a644b400d611bfa086e0cdb6b0a41228809ffd3d&h=libreoffice-4-2

Related: fdo#73051 make font size drop down of optimal width


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.