Related: fdo#73051 make font size drop down of optimal width

presumably keithcu felt the font size was too wide, so lets
try and implement the desired effect of an optimal width.

Change-Id: Idc1741de04b3559fa415ebcf2289f96ba240ca8f